Fix radio button spacing

--- a/custom-config/radio/custom.css
+++ b/custom-config/radio/custom.css
@@ -175,6 +175,12 @@ max-width: 100%;
     }
 }
 
+.jexummenu {
+    display: flex;
+    align-items: flex-start;
+    gap: 2px;
+}
+
 #plapau, #volumedown, #volumeset, #volumeup, #lif {
     float: left;
 }
@@ -221,7 +227,7 @@ max-width: 100%;
 
 .jexum {
     background-color: hsla(0, 0%, 100%, .05);
-    margin: 0px 2px 3px 0px;
+    margin: 0 0 3px 0;
     text-align: center;
     transition: 0.5s;
     background-size: 200% auto;
